# research-project

./: .gitignore  README.md  dev.ipynb  dev_embedding.ipynb  hello.py  main.py  pyproject.toml  todo.txt
data/paper_extracted/: A-Modified-Logistic-Regression-for-Positive-and-Unlabeled-Learning-final-submission.json  Application_of_machine_learning_techniques_for_supply_chain_demand_forecasting.json  paper.json
data/paper_summaries/: A-Modified-Logistic-Regression-for-Positive-and-Unlabeled-Learning-final-submission_summary.md  A-Modified-Logistic-Regression-for-Positive-and-Unlabeled-Learning-final-submission_summary_nova_lite.md  summary_output.md
data/paper_summaries/A-Modified-Logistic-Regression-for-Positive-and-Unlabeled-Learning-final-submission.json/: abstract.md  conclusion.md  global_summary.md  introduction.md  methodology.md  result.md
notebooks/: dev_docling.ipynb  dev_search.ipynb  note_searcher.ipynb  paper_extractor.ipynb  paper_summarizer.ipynb
package/dataset/: sentence_nextaction.py  sentence_query.py
package/embedding/: model.py
package/vectordb/: numpy.py
src/config/: note_searcher.yaml  paper_extractor.yaml  paper_summarizer.yaml
src/llms/: base.py  bedrock.py  ollama.py
src/paper_extractor/: extractor.py  extractor_rulebase_v1.py
src/paper_summarizer/: summarizer.py  summarizer_v1.py  summarizer_v2.py
src/search/: embedding.py  full_text_search.py  hybrid_search.py  vector_search.py
src/searcher/: embedding.py  full_text_search.py  hybrid_search.py  vector_search.py
src/utils/: loader.py  logger.py
(+19 files in other folders)
